# cse210-03-dice-game

./: LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
game/: __main__.py  diceclass.py  dicegame.py
